Refactor MatrixMap to not always return optional instead incorporating that into the type parameter if the map is specifically meant to be sparse.